--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@ footer {
   padding-bottom: 35px;
 }
 
+.center {
+  padding-top: 4%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+  height: 25%;
+}
+
 /*-- Extra Bootstrap Column Padding --*/
 
 [class*="col-"] {
