--- a/index.css
+++ b/index.css
@@ -83,7 +83,7 @@ footer {
 .container p span.typed-text {
   font-family: 'Montserrat', sans-serif;
   font-weight: normal;
-  color: #0fbb29;
+  color: #0eab25;
 }
 .container p span.cursor {
   display: inline-block;
