--- a/style.css
+++ b/style.css
@@ -150,5 +150,10 @@ h3 {
   }
 }
 
-#recs {
+#block {
+  padding-top: 10%;
+  background-color: black;
+  height: 200px;
+  width: 100%;
+  position: absolute
 }
